--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-/* ========= RESET ========= */
+/* ================= RESET ================= */
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif}
 
-/* ========= BODY ========= */
+/* ================= BODY ================= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
   scroll-snap-type:y mandatory;
 }
 
-/* ========= NAV ========= */
+/* ================= NAV ================= */
 nav{
   position:fixed;
   top:0;left:50%;
   transform:translateX(-50%);
-  width:100%;
   height:80px;
+  width:100%;
   display:flex;
   justify-content:center;
   align-items:center;
@@ -41,7 +41,7 @@ nav span{
   cursor:pointer;
 }
 
-/* ========= SECTIONS ========= */
+/* ================= SECTIONS ================= */
 .section{
   min-height:100vh;
   padding:180px 10vw 160px 22vw;
@@ -52,17 +52,15 @@ nav span{
   max-width:1100px;
 }
 
-/* ========= TITLES ========= */
+/* ================= TITLES ================= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
 }
 
-/* ========= HERO ========= */
-.hero h1{
-  font-size:clamp(80px,7vw,140px);
-}
+/* ================= HERO ================= */
+.hero h1{font-size:clamp(80px,7vw,140px)}
 .hero-sub{
   margin-top:24px;
   font-size:14px;
@@ -70,29 +68,13 @@ h1{
   color:#777;
 }
 
-/* ========= ABOUT ========= */
-.about{
-  display:flex;
-  margin-top:12px;
-}
-.about p{
-  max-width:700px;
-  color:#aaa;
-  line-height:1.6;
-}
-.about img{
-  width:300px;
-  height:400px;
-  margin-left:40px;
-  object-fit:cover;
-}
+/* ================= ABOUT ================= */
+.about{display:flex;margin-top:12px}
+.about p{max-width:700px;color:#aaa;line-height:1.6}
+.about img{width:300px;height:400px;margin-left:40px;object-fit:cover}
 
-/* ========= PORTFOLIO ========= */
-.portfolio-wrapper{
-  margin-top:32px;
-  margin-left:8px;
-  overflow:hidden;
-}
+/* ================= PORTFOLIO ================= */
+.portfolio-wrapper{margin-top:32px;margin-left:8px;overflow:hidden}
 .portfolio-carousel{
   display:flex;
   gap:48px;
@@ -100,26 +82,16 @@ h1{
   cursor:grab;
   user-select:none;
 }
+.portfolio-carousel.grabbing{cursor:grabbing}
 .project-card{
   min-width:460px;
   opacity:.4;
   transform:scale(.96);
   transition:.4s ease;
 }
-.project-card.active{
-  opacity:1;
-  transform:scale(1);
-}
-.project-image{
-  position:relative;
-  height:260px;
-  overflow:hidden;
-}
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-}
+.project-card.active{opacity:1;transform:scale(1)}
+.project-image{height:260px;overflow:hidden;position:relative}
+.project-image img{width:100%;height:100%;object-fit:cover}
 .project-overlay{
   position:absolute;
   inset:0;
@@ -131,24 +103,12 @@ h1{
   transition:.3s ease;
 }
 .project-card.active .project-overlay{opacity:1}
-.project-inner h2{
-  margin-top:20px;
-  font-size:28px;
-  font-weight:400;
-}
+.project-inner h2{margin-top:20px;font-size:28px;font-weight:400}
 
-/* ========= CV ========= */
-.timeline{
-  margin-top:60px;
-  padding-left:60px;
-  position:relative;
-}
+/* ================= CV ================= */
+.timeline{margin-top:60px;padding-left:60px;position:relative}
 .timeline-line{
-  position:absolute;
-  left:20px;
-  top:0;
-  width:1px;
-  height:0;
+  position:absolute;left:20px;top:0;width:1px;height:0;
   background:linear-gradient(#fff,#777);
 }
 .timeline-item{
@@ -157,19 +117,14 @@ h1{
   transform:translateY(20px);
   transition:.8s ease;
 }
-.timeline-item.is-visible{
-  opacity:1;
-  transform:none;
-}
+.timeline-item.is-visible{opacity:1;transform:none}
 .timeline-item::before{
   content:"";
   position:absolute;
   left:-44px;
   top:50%;
   transform:translateY(-50%);
-  width:10px;
-  height:10px;
-  border-radius:50%;
+  width:10px;height:10px;border-radius:50%;
   background:#fff;
 }
 .timeline-card{
@@ -178,98 +133,48 @@ h1{
   padding:28px;
 }
 
-/* ========= CONTACT ========= */
+/* ================= CONTACT (NUEVO) ================= */
+.contact{
+  margin-top:40px;
+  display:flex;
+  flex-direction:column;
+  gap:28px;
+}
+
 .contact a{
-  display:block;
-  font-size:18px;
+  font-size:26px;
+  font-weight:400;
   color:#ddd;
   text-decoration:none;
-  margin-bottom:16px;
+  position:relative;
+  width:fit-content;
+  opacity:0;
+  transform:translateY(16px);
+  transition:
+    opacity .8s ease,
+    transform .8s ease,
+    color .3s ease;
 }
 
-/* ============================= */
-/* ========= TABLET ========= */
-/* ============================= */
-@media (max-width:1199px){
-  .section{
-    padding:160px 8vw 140px 12vw;
-  }
-  .section-block{
-    top:200px;
-  }
-  .project-card{
-    min-width:380px;
-  }
-  .about{
-    flex-direction:column;
-  }
-  .about img{
-    margin:32px 0 0 0;
-    width:100%;
-    height:auto;
-  }
+.contact a::after{
+  content:"";
+  position:absolute;
+  left:0;
+  bottom:-6px;
+  width:0;
+  height:1px;
+  background:#fff;
+  transition:.3s ease;
 }
 
-/* ============================= */
-/* ========= MOBILE ========= */
-/* ============================= */
-@media (max-width:767px){
-  nav{
-    gap:24px;
-    height:64px;
-  }
+.contact a:hover{color:#fff}
+.contact a:hover::after{width:100%}
 
-  .section{
-    padding:120px 6vw 100px 6vw;
-  }
-
-  .section-block{
-    position:static;
-  }
-
-  h1{
-    font-size:clamp(44px,10vw,64px);
-  }
-
-  .hero h1{
-    font-size:clamp(52px,12vw,72px);
-  }
-
-  .about img{
-    width:100%;
-    height:auto;
-  }
-
-  .portfolio-carousel{
-    gap:24px;
-  }
-
-  .project-card{
-    min-width:280px;
-  }
-
-  .project-image{
-    height:200px;
-  }
-
-  .timeline{
-    padding-left:0;
-  }
-
-  .timeline-line{
-    left:50%;
-    transform:translateX(-50%);
-  }
-
-  .timeline-item::before{
-    left:50%;
-    transform:translate(-50%,-50%);
-  }
-
-  .timeline-card{
-    margin-top:24px;
-  }
+.contact a.is-visible{
+  opacity:1;
+  transform:none;
 }
+
 </style>
 </head>
 
@@ -305,6 +210,7 @@ h1{
     <h1>Portfolio</h1>
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel" id="carousel">
+
         <div class="project-card">
           <div class="project-image">
             <img src="brazo1.jpg">
@@ -312,6 +218,7 @@ h1{
           </div>
           <div class="project-inner"><h2>NODE</h2></div>
         </div>
+
         <div class="project-card">
           <div class="project-image">
             <img src="reloj1.jpg">
@@ -319,6 +226,7 @@ h1{
           </div>
           <div class="project-inner"><h2>Sixay · Cómoda</h2></div>
         </div>
+
       </div>
     </div>
   </div>
@@ -341,7 +249,7 @@ h1{
     <h1>Contacto</h1>
     <div class="contact">
       <a href="mailto:luis@email.com">luis@email.com</a>
-      <a href="#">LinkedIn</a>
+      <a href="https://linkedin.com" target="_blank">LinkedIn</a>
     </div>
   </div>
 </section>
@@ -353,33 +261,16 @@ document.querySelectorAll("nav span").forEach((b,i)=>{
     .scrollIntoView({behavior:"smooth"});
 });
 
-/* DRAG SCROLL */
-const carousel=document.getElementById("carousel");
-let dragging=false,startX,scrollStart;
-
-carousel.addEventListener("pointerdown",e=>{
-  dragging=true;
-  startX=e.clientX;
-  scrollStart=carousel.scrollLeft;
-  carousel.setPointerCapture(e.pointerId);
-});
-carousel.addEventListener("pointermove",e=>{
-  if(!dragging)return;
-  carousel.scrollLeft=scrollStart-(e.clientX-startX);
-});
-carousel.addEventListener("pointerup",()=>dragging=false);
-carousel.addEventListener("pointerleave",()=>dragging=false);
-
-/* ACTIVE CARD */
-function updateActive(){
-  const center=window.innerWidth/2;
-  document.querySelectorAll(".project-card").forEach(card=>{
-    const r=card.getBoundingClientRect();
-    card.classList.toggle("active",Math.abs(r.left+r.width/2-center)<180);
+/* OBSERVER */
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    if(e.isIntersecting) e.target.classList.add("is-visible");
   });
-}
-carousel.addEventListener("scroll",updateActive);
-updateActive();
+},{threshold:.2});
+
+document
+  .querySelectorAll(".timeline-item,.contact a")
+  .forEach(el=>observer.observe(el));
 
 /* TIMELINE LINE */
 const timeline=document.querySelector(".timeline");
