--- a/index.html
+++ b/index.html
@@ -8,29 +8,40 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif}
 
+/* ========= RESET ========= */
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:"Inter",sans-serif;
+}
+
+/* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
+  overflow-y:scroll;
   scroll-snap-type:y mandatory;
 }
 
-/* NAV */
+/* ========= NAV ========= */
 nav{
   position:fixed;
-  top:0;left:50%;
+  top:0;
+  left:50%;
   transform:translateX(-50%);
-  height:80px;
   width:100%;
+  height:80px;
   display:flex;
   justify-content:center;
   align-items:center;
   gap:50px;
-  backdrop-filter:blur(12px);
   background:rgba(10,10,10,.4);
+  backdrop-filter:blur(12px);
   z-index:100;
 }
+
 nav span{
   font-size:11px;
   letter-spacing:.3em;
@@ -39,75 +50,155 @@ nav span{
   cursor:pointer;
 }
 
-/* SECTIONS */
+/* ========= SECTIONS ========= */
 .section{
   min-height:100vh;
+  scroll-snap-align:start;
+  display:flex;
+  justify-content:flex-start;
   padding:180px 10vw 160px 22vw;
 }
+
 .section-block{
   position:sticky;
   top:260px;
   max-width:1100px;
 }
 
-/* TITLES */
+/* ========= TITULOS DE SECCIÓN ========= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
 }
 
-/* HERO */
-.hero h1{font-size:clamp(80px,7vw,140px)}
+/* ========= HERO ========= */
+.section.hero{
+  align-items:center;
+}
+
+.section.hero h1{
+  font-size:clamp(80px,7vw,140px);
+  margin-left:-4px;
+}
+
 .hero-sub{
   margin-top:24px;
+  padding-left:4px;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
 }
 
-/* ABOUT */
-.about{display:flex;margin-top:12px}
-.about p{max-width:700px;color:#aaa;line-height:1.6}
-.about img{width:300px;height:400px;margin-left:40px;object-fit:cover}
+/* ========= TEXT ========= */
+.section-block p{
+  margin-top:8px;
+  padding-left:8px;
+  font-size:15px;
+  color:#aaa;
+  max-width:700px;
+  line-height:1.6;
+  text-align:justify;
+}
 
-/* PORTFOLIO */
-.portfolio-wrapper{margin-top:32px;margin-left:8px;overflow:hidden}
+/* ========= ABOUT ========= */
+.about{
+  display:flex;
+  align-items:flex-start;
+  margin-top:12px;
+}
+
+.about img{
+  width:300px;
+  height:400px;
+  margin-left:40px;
+  object-fit:cover;
+  opacity:.9;
+}
+
+/* ========= PORTFOLIO ========= */
+.portfolio-wrapper{
+  position:relative;
+  margin-top:32px;
+  margin-left:8px;
+  overflow:hidden;
+  padding-right:120px;
+}
+
+.portfolio-wrapper::after{
+  content:"";
+  position:absolute;
+  top:0;
+  right:0;
+  width:120px;
+  height:100%;
+  pointer-events:none;
+  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
+}
+
 .portfolio-carousel{
   display:flex;
   gap:48px;
   overflow-x:auto;
-  cursor:grab;
-  user-select:none;
+  padding-bottom:20px;
+  scroll-behavior:smooth;
+  scrollbar-width:thin;
+  scrollbar-color:#444 transparent;
 }
+
+.portfolio-carousel::-webkit-scrollbar{height:6px}
+.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
+
 .project-card{
   min-width:460px;
-  opacity:.4;
-  transform:scale(.96);
-  transition:.4s ease;
-}
-.project-card.active{opacity:1;transform:scale(1)}
-.project-image{height:260px;overflow:hidden;position:relative}
-.project-image img{width:100%;height:100%;object-fit:cover}
-.project-overlay{
-  position:absolute;
-  inset:0;
-  background:rgba(0,0,0,.45);
-  display:flex;
-  align-items:flex-end;
-  padding:24px;
+  text-decoration:none;
+  color:inherit;
   opacity:0;
-  transition:.3s ease;
+  transform:translateY(12px);
+  transition:opacity .8s ease, transform .8s ease;
 }
-.project-card.active .project-overlay{opacity:1}
-.project-inner h2{margin-top:20px;font-size:28px;font-weight:400}
 
-/* ================= CV (RESTAURADO) ================= */
+.project-card.is-visible{
+  opacity:1;
+  transform:none;
+}
+
+.project-image{
+  height:260px;
+  margin-bottom:20px;
+  overflow:hidden;
+}
+
+.project-image img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  transition:transform .4s ease;
+}
+
+.project-card:hover img{
+  transform:scale(1.03);
+}
+
+.project-inner h2{
+  font-size:28px;
+  font-weight:400;
+}
+
+.project-inner span{
+  font-size:12px;
+  letter-spacing:.18em;
+  color:#777;
+  text-transform:uppercase;
+}
+
+/* ========= CV TIMELINE ========= */
 .timeline{
   position:relative;
   margin-top:60px;
   padding-left:60px;
 }
+
 .timeline-line{
   position:absolute;
   left:20px;
@@ -115,8 +206,9 @@ h1{
   width:1px;
   height:0;
   background:linear-gradient(#fff,#777);
-  transition:height .25s ease-out;
+  transition:height .25s ease-out; /* MÁS RÁPIDA */
 }
+
 .timeline-item{
   position:relative;
   margin-bottom:80px;
@@ -125,10 +217,12 @@ h1{
   transform:translateY(20px);
   transition:.8s ease;
 }
+
 .timeline-item.is-visible{
   opacity:1;
   transform:none;
 }
+
 .timeline-item::before{
   content:"";
   position:absolute;
@@ -140,12 +234,14 @@ h1{
   border-radius:50%;
   background:#fff;
 }
+
 .timeline-card{
   background:rgba(255,255,255,.04);
   border:1px solid rgba(255,255,255,.08);
   border-radius:20px;
   padding:28px;
 }
+
 .timeline-card h3{
   font-size:18px;
   font-weight:500;
@@ -153,43 +249,17 @@ h1{
   text-transform:uppercase;
   margin-bottom:16px;
 }
+
 .timeline-card strong{
   display:block;
   font-size:16px;
 }
+
 .timeline-card span{
   font-size:13px;
   color:#888;
 }
 
-/* ================= CONTACTO (FRAMER) ================= */
-.contact{
-  margin-top:60px;
-  display:flex;
-  flex-direction:column;
-  gap:48px;
-}
-.contact::before{
-  content:"";
-  width:120px;
-  height:1px;
-  background:rgba(255,255,255,.15);
-}
-.contact-item{
-  font-size:clamp(28px,3vw,42px);
-  font-weight:400;
-  color:#eee;
-  text-decoration:none;
-  width:fit-content;
-  opacity:0;
-  transform:translateY(24px);
-  transition:opacity .9s ease, transform .9s ease, color .3s ease;
-}
-.contact-item:hover{color:#fff}
-.contact-item.is-visible{
-  opacity:1;
-  transform:none;
-}
 </style>
 </head>
 
@@ -200,7 +270,6 @@ h1{
   <span data-i="1">Sobre mí</span>
   <span data-i="2">Portfolio</span>
   <span data-i="3">CV</span>
-  <span data-i="4">Contacto</span>
 </nav>
 
 <section class="section hero">
@@ -214,8 +283,18 @@ h1{
   <div class="section-block">
     <h1>Sobre mí</h1>
     <div class="about">
-      <p>Ingeniero en diseño industrial con perfil ecléctico y base técnica.</p>
-      <img src="foto.jpg">
+      <p>
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
+        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
+        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
+        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
+        desde la fase de análisis hasta la materialización.
+      </p>
+      <img src="foto.jpg" alt="">
     </div>
   </div>
 </section>
@@ -223,15 +302,42 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
+
     <div class="portfolio-wrapper">
-      <div class="portfolio-carousel" id="carousel">
-        <div class="project-card">
-          <div class="project-image">
-            <img src="brazo1.jpg">
-            <div class="project-overlay"><span>Proyecto final de grado</span></div>
+      <div class="portfolio-carousel">
+
+        <a href="node.html" class="project-card">
+          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
           </div>
-          <div class="project-inner"><h2>NODE</h2></div>
-        </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-image"><img src="secador2.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-image"></div>
+          <div class="project-inner">
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+          </div>
+        </a>
+
       </div>
     </div>
   </div>
@@ -240,6 +346,7 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
+
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
 
@@ -286,16 +393,6 @@ h1{
   </div>
 </section>
 
-<section class="section">
-  <div class="section-block">
-    <h1>Contacto</h1>
-    <div class="contact">
-      <a class="contact-item" href="mailto:luis@email.com">luis@email.com</a>
-      <a class="contact-item" href="https://linkedin.com" target="_blank">LinkedIn</a>
-    </div>
-  </div>
-</section>
-
 <script>
 /* NAV */
 document.querySelectorAll("nav span").forEach((b,i)=>{
@@ -305,23 +402,20 @@ document.querySelectorAll("nav span").forEach((b,i)=>{
 
 /* OBSERVER */
 const observer=new IntersectionObserver(entries=>{
-  entries.forEach((e,i)=>{
-    if(e.isIntersecting){
-      setTimeout(()=>e.target.classList.add("is-visible"),i*120);
-    }
-  });
-},{threshold:.3});
+  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
+},{threshold:.2});
 
-document
-  .querySelectorAll(".timeline-item,.contact-item")
+document.querySelectorAll(".project-card,.timeline-item")
   .forEach(el=>observer.observe(el));
 
-/* TIMELINE LINE */
+/* TIMELINE LINE PROGRESS (MÁS DIRECTA) */
 const timeline=document.querySelector(".timeline");
 const line=document.getElementById("timelineLine");
+
 window.addEventListener("scroll",()=>{
-  const r=timeline.getBoundingClientRect();
-  line.style.height=Math.max(0,Math.min(window.innerHeight-r.top,r.height))+"px";
+  const rect=timeline.getBoundingClientRect();
+  const visible=Math.min(window.innerHeight-rect.top,rect.height);
+  line.style.height=Math.max(0,visible)+"px";
 });
 </script>
 
