--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ nav span{
   max-width:1100px;
 }
 
-/* ========= TITULOS DE SECCIÓN ========= */
+/* ========= TITULOS ========= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
@@ -73,9 +73,7 @@ h1{
 }
 
 /* ========= HERO ========= */
-.section.hero{
-  align-items:center;
-}
+.section.hero{align-items:center;}
 
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
@@ -84,185 +82,24 @@ h1{
 
 .hero-sub{
   margin-top:24px;
-  padding-left:4px;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
 }
 
-/* ========= TEXT ========= */
-.section-block p{
-  margin-top:8px;
-  padding-left:8px;
-  font-size:15px;
-  color:#aaa;
-  max-width:700px;
-  line-height:1.6;
-  text-align:justify;
+/* ========= CONTACTO ========= */
+.section.contact-section{
+  min-height:auto;
+  padding-bottom:120px;
 }
 
-/* ========= ABOUT ========= */
-.about{
-  display:flex;
-  align-items:flex-start;
-  margin-top:12px;
-}
-
-.about img{
-  width:300px;
-  height:400px;
-  margin-left:40px;
-  object-fit:cover;
-  opacity:.9;
-}
-
-/* ========= PORTFOLIO ========= */
-.portfolio-wrapper{
+.section.contact-section .section-block{
   position:relative;
-  margin-top:32px;
-  margin-left:8px;
-  overflow:hidden;
-  padding-right:120px;
+  top:auto;
 }
 
-.portfolio-wrapper::after{
-  content:"";
-  position:absolute;
-  top:0;
-  right:0;
-  width:120px;
-  height:100%;
-  pointer-events:none;
-  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
-}
-
-.portfolio-carousel{
-  display:flex;
-  gap:48px;
-  overflow-x:auto;
-  padding-bottom:20px;
-  scroll-behavior:smooth;
-  scrollbar-width:thin;
-  scrollbar-color:#444 transparent;
-}
-
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
-
-.project-card{
-  min-width:460px;
-  text-decoration:none;
-  color:inherit;
-  opacity:0;
-  transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
-}
-
-.project-card.is-visible{
-  opacity:1;
-  transform:none;
-}
-
-.project-image{
-  height:260px;
-  margin-bottom:20px;
-  overflow:hidden;
-}
-
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  transition:transform .4s ease;
-}
-
-.project-card:hover img{
-  transform:scale(1.03);
-}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
-/* ========= CV ========= */
-.timeline{
-  position:relative;
-  margin-top:60px;
-  padding-left:60px;
-}
-
-.timeline-line{
-  position:absolute;
-  left:20px;
-  top:0;
-  width:1px;
-  height:0;
-  background:linear-gradient(#fff,#777);
-  transition:height .25s ease-out;
-}
-
-.timeline-item{
-  position:relative;
-  margin-bottom:80px;
-  max-width:520px;
-  opacity:0;
-  transform:translateY(20px);
-  transition:.8s ease;
-}
-
-.timeline-item.is-visible{
-  opacity:1;
-  transform:none;
-}
-
-.timeline-item::before{
-  content:"";
-  position:absolute;
-  left:-44px;
-  top:50%;
-  transform:translateY(-50%);
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:#fff;
-}
-
-.timeline-card{
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  border-radius:20px;
-  padding:28px;
-}
-
-.timeline-card h3{
-  font-size:18px;
-  font-weight:500;
-  letter-spacing:.12em;
-  text-transform:uppercase;
-  margin-bottom:16px;
-}
-
-.timeline-card strong{
-  display:block;
-  font-size:16px;
-}
-
-.timeline-card span{
-  font-size:13px;
-  color:#888;
-}
-
-/* ========= CONTACTO — FRAMER STYLE ========= */
 .contact-grid{
-  margin-top:32px;
+  margin-top:48px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
   gap:32px;
@@ -273,30 +110,61 @@ h1{
   border:1px solid rgba(255,255,255,.08);
   border-radius:20px;
   padding:28px;
-  transition:transform .3s ease, background .3s ease;
+  display:flex;
+  gap:16px;
+  align-items:flex-start;
+  opacity:0;
+  transform:translateY(16px);
+  transition:.6s ease;
 }
 
-.contact-card:hover{
-  transform:translateY(-4px);
-  background:rgba(255,255,255,.06);
+.contact-card.is-visible{
+  opacity:1;
+  transform:none;
 }
 
-.contact-card strong{
+.contact-icon{
+  width:20px;
+  height:20px;
+  stroke:#fff;
+  stroke-width:1.4;
+  fill:none;
+  flex-shrink:0;
+  margin-top:4px;
+}
+
+.contact-content strong{
   display:block;
   font-size:15px;
-  font-weight:500;
-  margin-bottom:6px;
+  margin-bottom:4px;
 }
 
-.contact-card a,
-.contact-card span{
+.contact-content a,
+.contact-content span{
   font-size:14px;
   color:#888;
   text-decoration:none;
 }
 
-.contact-card a:hover{
-  color:#fff;
+.contact-content a:hover{color:#fff;}
+
+.copy-btn{
+  margin-top:8px;
+  font-size:12px;
+  letter-spacing:.08em;
+  text-transform:uppercase;
+  color:#aaa;
+  cursor:pointer;
+}
+
+.copy-btn.copied{color:#fff;}
+
+/* ========= FOOTER ========= */
+footer{
+  padding:60px 10vw 40px 22vw;
+  font-size:11px;
+  letter-spacing:.2em;
+  color:#666;
 }
 
 </style>
@@ -319,81 +187,87 @@ h1{
   </div>
 </section>
 
-<section class="section">
-  <div class="section-block">
-    <h1>Sobre mí</h1>
-    <div class="about">
-      <p>Ingeniero en diseño industrial de 24 años, con base en Valencia…</p>
-      <img src="foto.jpg">
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="section-block">
-    <h1>Portfolio</h1>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel">
-        <!-- proyectos -->
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="section-block">
-    <h1>CV</h1>
-    <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
-      <!-- timeline -->
-    </div>
-  </div>
-</section>
-
-<section class="section">
+<!-- ===== CONTACTO ===== -->
+<section class="section contact-section">
   <div class="section-block">
     <h1>Contacto</h1>
 
     <div class="contact-grid">
+
       <div class="contact-card">
-        <strong>Email</strong>
-        <a href="mailto:luis@example.com">luis@example.com</a>
+        <svg class="contact-icon" viewBox="0 0 24 24">
+          <rect x="2" y="5" width="20" height="14" rx="2"/>
+          <path d="M2 7l10 6 10-6"/>
+        </svg>
+        <div class="contact-content">
+          <strong>Email</strong>
+          <a href="mailto:luis@example.com">luis@example.com</a>
+          <div class="copy-btn" data-copy="luis@example.com">Copiar email</div>
+        </div>
       </div>
 
       <div class="contact-card">
-        <strong>LinkedIn</strong>
-        <a href="https://www.linkedin.com" target="_blank">linkedin.com</a>
+        <svg class="contact-icon" viewBox="0 0 24 24">
+          <path d="M16 8a6 6 0 01-12 0 6 6 0 0112 0z"/>
+          <path d="M2 22c1.5-4 6-6 10-6s8.5 2 10 6"/>
+        </svg>
+        <div class="contact-content">
+          <strong>LinkedIn</strong>
+          <a href="https://www.linkedin.com" target="_blank">linkedin.com</a>
+        </div>
       </div>
 
       <div class="contact-card">
-        <strong>Ubicación</strong>
-        <span>Valencia, España</span>
+        <svg class="contact-icon" viewBox="0 0 24 24">
+          <path d="M12 21s7-7 7-11a7 7 0 10-14 0c0 4 7 11 7 11z"/>
+          <circle cx="12" cy="10" r="2.5"/>
+        </svg>
+        <div class="contact-content">
+          <strong>Ubicación</strong>
+          <span>Valencia, España</span>
+        </div>
       </div>
+
     </div>
-
   </div>
 </section>
 
+<footer>
+  © 2026 · Luis Blasco-Ibáñez Berbel
+</footer>
+
 <script>
+/* NAV */
 document.querySelectorAll("nav span").forEach((b,i)=>{
   b.onclick=()=>document.querySelectorAll(".section")[i]
     .scrollIntoView({behavior:"smooth"});
 });
 
+/* CONTACT ANIMATION */
+const cards=document.querySelectorAll(".contact-card");
 const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.2});
+  entries.forEach(e=>{
+    if(e.isIntersecting){
+      cards.forEach((c,i)=>{
+        setTimeout(()=>c.classList.add("is-visible"),i*120);
+      });
+    }
+  });
+},{threshold:.3});
 
-document.querySelectorAll(".project-card,.timeline-item")
-  .forEach(el=>observer.observe(el));
+cards.forEach(c=>observer.observe(c));
 
-const timeline=document.querySelector(".timeline");
-const line=document.getElementById("timelineLine");
-
-window.addEventListener("scroll",()=>{
-  const rect=timeline.getBoundingClientRect();
-  const visible=Math.min(window.innerHeight-rect.top,rect.height);
-  line.style.height=Math.max(0,visible)+"px";
+/* COPY EMAIL */
+document.querySelectorAll(".copy-btn").forEach(btn=>{
+  btn.onclick=()=>{
+    navigator.clipboard.writeText(btn.dataset.copy);
+    btn.textContent="Copiado";
+    btn.classList.add("copied");
+    setTimeout(()=>{
+      btn.textContent="Copiar email";
+      btn.classList.remove("copied");
+    },1600);
+  };
 });
 </script>
 
